--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
 <!doctype html>
 
 <head>
+	<title>Form Exercise</title>
 	<meta charset="utf-8">
 	<script>
-		// TODO: create a handler
-    window.addEventListener("load", function(){
-        // TODO: register the handler
-    });
+		let actions = {
+			Google: "https://www.google.com/search",
+			DuckDuckGo: "https://www.duckduckgo.com",
+			Bing: "https://www.bing.com/search"
+			//Ask: "https://www.ask.com/search/"
+		};
+		let engine;
+		function setSearchEngine() {
+			engine = document.querySelector("input[name=engine]:checked");
+		}
+		window.addEventListener("load", function () {
+			let searchForm = document.getElementById("searchForm");
+			searchForm.addEventListener("submit",
+				function (submitEvent) {
+					if (document.querySelector("input[name=q]").value === "") {
+						alert("No search term was provided.");
+						submitEvent.preventDefault();
+					}
+					else {
+						try {
+							setSearchEngine();
+							searchForm.setAttribute("action", actions[engine.value]);
+							searchForm.setAttribute("method", "GET");
+						}
+						catch (TypeError) {
+							alert("No search engine was selected.");
+							submitEvent.preventDefault();
+						}
+					}
+				});
+		});
 	</script>
 </head>
 
 <body>
-
 	<form id="searchForm">
-    <!-- TODO: add form elements -->
+		<label>Query: <input type="text" name="q" /></label>
+		<input type="submit" value="Go!" />
 	</form>
-
+	<label><input type="radio" name="engine" value="Google" />Google</label>
+	<label><input type="radio" name="engine" value="DuckDuckGo" />DuckDuckGo</label>
+	<label><input type="radio" name="engine" value="Bing" />Bing</label>
+	<!--<label><input type="radio" name="engine" value="Ask" />Ask</label>-->
 </body>
